tyle udao si zrobic

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top">
-        <div class="container">
+        <div class="container nav-container">
             <a class="navbar-brand" href="#">Klub podróżniczy</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,7 +51,7 @@
                     <form class="form">
                         <div class="form-header">
                             <h1>Dołącz do nas</h1>
-                            <h2>Wypełnij zgłoszenie na członka klubu:</h2>
+                            <p>Wypełnij zgłoszenie na członka klubu:</p>
                             <span>ołówek</span>
                         </div>
                         <div class="form-group row">
@@ -84,8 +84,8 @@
 
                 <div class="col-lg-6">
                     <h1>Świat jest na wyciągnięcie ręki</h1>
-                    <h2>Poznaj ludzi, których łączy wspólna pasja do podróżowania. Przekonaj się, jak wygląda życie bez
-                        granic</h2>
+                    <p>Poznaj ludzi, których łączy wspólna pasja do podróżowania. Przekonaj się, jak wygląda życie bez
+                        granic</p>
                     <a href="" class="btn">Znajdź nas ></a>
                     <a href="" class=" btn btn-dark">Dowiedz się więcej <span></span></a>
 
@@ -102,13 +102,11 @@
                     <!-- video -->
                 </div>
                 <div class="col-lg-6">
-                    <h1>Inspirujemy</h1>
-                    <p>Poznaj historie ludzi</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius quos omnis hic, dignissimos
-                        eveniet eaque odit animi, autem nam, aliquid nesciunt maiores. Amet laboriosam exercitationem
-                        provident ipsum quaerat! Earum, quae.</p>
+                    <h2>Inspirujemy</h2>
+                    <p>Poznaj historie ludzi, którzy zrealizowali swoje marzenia.</p>
+                    <p>Podróżowanie pozwala poznać świat i odkryć siebie. Spełniaj swoje marzenia i zdobywaj nowe pasje. Daj się ponieśc przygodzie i dołącz do grona paskonatów</p>
                     
-                        <a href="" class="link">Więcej historii</a>
+                    <a href="" class="link">Więcej historii</a>
                 </div>
             </div>
         </div>
@@ -119,13 +117,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <h1>O nas</h1>
-                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, illo necessitatibus? Quas
-                        officiis fugit consectetur. Laboriosam ullam asperiores animi temporibus natus voluptatem, nemo,
-                        id ex exercitationem eos corporis deleniti aut.</h2>
+                    <h2>O nas</h2>
+                    <p>Naszym głownym celem jest wymiana doświadczeń między podróżnikami podczas cyklicznych spotkań. Naszym największym kapitałem jest wiedza i zaangażowanie naszych członków</p>
                 </div>
                 <div class="col-lg-6">
-                    <h1>Kontakt</h1>
+                    <h2>Kontakt</h2>
                     <a href="mailto:klub@podroznika.pl" class="link">klub@podroznika.pl</a>
                 </div>
             </div>
